--- a/Draw/ZhaJinHua/View/PokerView.xib
+++ b/Draw/ZhaJinHua/View/PokerView.xib
@@ -154,7 +154,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="50181958">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="785200222">
@@ -203,7 +203,6 @@
 					</object>
 				</array>
 				<string key="NSFrameSize">{43, 36}</string>
-				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="785200222"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="556809111"/>
