--- a/Draw/ZhaJinHua/View/ZJHAvatarView.xib
+++ b/Draw/ZhaJinHua/View/ZJHAvatarView.xib
@@ -57,7 +57,7 @@
 						<string key="NSFrame">{{5, 24}, {45, 45}}</string>
 						<reference key="NSSuperview" ref="420009022"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor" id="32706529">
+						<object class="NSColor" key="IBUIBackgroundColor" id="693792213">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
@@ -77,30 +77,29 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Label</string>
 						<object class="NSColor" key="IBUITextColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MCAwIDAAA</bytes>
-							<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MQA</bytes>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
+						<float key="IBUIMinimumFontSize">2</float>
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">1</int>
-							<double key="pointSize">17</double>
+							<double key="pointSize">10</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">17</double>
+							<double key="NSSize">10</double>
 							<int key="NSfFlags">16</int>
 						</object>
-						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 				</array>
 				<string key="NSFrameSize">{54, 74}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSNextKeyView" ref="317097103"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<reference key="IBUIBackgroundColor" ref="32706529"/>
+				<reference key="IBUIBackgroundColor" ref="693792213"/>
 				<object class="IBUISimulatedSizeMetrics" key="IBUISimulatedDestinationMetrics">
 					<string key="IBUISimulatedSizeMetricsClass">IBUISimulatedFreeformSizeMetricsSentinel</string>
 					<string key="IBUIDisplayName">Freeform</string>
@@ -158,7 +157,7 @@
 						<int key="objectID">3</int>
 						<reference key="object" ref="420009022"/>
 						<array class="NSMutableArray" key="children">
-							<object class="IBNSLayoutConstraint" id="582853806">
+							<object class="IBNSLayoutConstraint" id="16079577">
 								<reference key="firstItem" ref="657775062"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
@@ -174,7 +173,7 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="437231716">
+							<object class="IBNSLayoutConstraint" id="853679952">
 								<reference key="firstItem" ref="420009022"/>
 								<int key="firstAttribute">4</int>
 								<int key="relation">0</int>
@@ -190,7 +189,7 @@
 								<float key="scoringTypeFloat">9</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="202827481">
+							<object class="IBNSLayoutConstraint" id="762655382">
 								<reference key="firstItem" ref="657775062"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
@@ -222,7 +221,7 @@
 								<float key="scoringTypeFloat">24</float>
 								<int key="contentType">2</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="375846440">
+							<object class="IBNSLayoutConstraint" id="51995342">
 								<reference key="firstItem" ref="755362746"/>
 								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
@@ -238,7 +237,7 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="1003088295">
+							<object class="IBNSLayoutConstraint" id="853304028">
 								<reference key="firstItem" ref="755362746"/>
 								<int key="firstAttribute">5</int>
 								<int key="relation">0</int>
@@ -254,7 +253,7 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="291612885">
+							<object class="IBNSLayoutConstraint" id="152197074">
 								<reference key="firstItem" ref="755362746"/>
 								<int key="firstAttribute">3</int>
 								<int key="relation">0</int>
@@ -286,7 +285,7 @@
 								<float key="scoringTypeFloat">29</float>
 								<int key="contentType">3</int>
 							</object>
-							<object class="IBNSLayoutConstraint" id="497892948">
+							<object class="IBNSLayoutConstraint" id="249368478">
 								<reference key="firstItem" ref="317097103"/>
 								<int key="firstAttribute">6</int>
 								<int key="relation">0</int>
@@ -343,7 +342,24 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">19</int>
 						<reference key="object" ref="755362746"/>
-						<array class="NSMutableArray" key="children"/>
+						<array class="NSMutableArray" key="children">
+							<object class="IBNSLayoutConstraint" id="752308155">
+								<reference key="firstItem" ref="755362746"/>
+								<int key="firstAttribute">8</int>
+								<int key="relation">0</int>
+								<nil key="secondItem"/>
+								<int key="secondAttribute">0</int>
+								<float key="multiplier">1</float>
+								<object class="IBLayoutConstant" key="constant">
+									<double key="value">21</double>
+								</object>
+								<float key="priority">1000</float>
+								<reference key="containingView" ref="755362746"/>
+								<int key="scoringType">3</int>
+								<float key="scoringTypeFloat">9</float>
+								<int key="contentType">1</int>
+							</object>
+						</array>
 						<reference key="parent" ref="420009022"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -369,7 +385,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">107</int>
-						<reference key="object" ref="497892948"/>
+						<reference key="object" ref="249368478"/>
 						<reference key="parent" ref="420009022"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -379,22 +395,22 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">130</int>
-						<reference key="object" ref="291612885"/>
+						<reference key="object" ref="152197074"/>
 						<reference key="parent" ref="420009022"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">131</int>
-						<reference key="object" ref="1003088295"/>
+						<reference key="object" ref="853304028"/>
 						<reference key="parent" ref="420009022"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">132</int>
-						<reference key="object" ref="375846440"/>
+						<reference key="object" ref="51995342"/>
 						<reference key="parent" ref="420009022"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">136</int>
-						<reference key="object" ref="202827481"/>
+						<reference key="object" ref="762655382"/>
 						<reference key="parent" ref="420009022"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -404,13 +420,18 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">158</int>
-						<reference key="object" ref="437231716"/>
+						<reference key="object" ref="853679952"/>
 						<reference key="parent" ref="420009022"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">159</int>
-						<reference key="object" ref="582853806"/>
+						<reference key="object" ref="16079577"/>
 						<reference key="parent" ref="420009022"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">161</int>
+						<reference key="object" ref="752308155"/>
+						<reference key="parent" ref="755362746"/>
 					</object>
 				</array>
 			</object>
@@ -430,8 +451,12 @@
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="158.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="159.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="161.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<array key="19.IBViewMetadataConstraints">
+					<reference ref="752308155"/>
+				</array>
 				<boolean value="NO" key="19.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<boolean value="NO" key="25.IBViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
@@ -440,22 +465,22 @@
 				<array class="NSMutableArray" key="3.IBViewMetadataConstraints">
 					<reference ref="907187009"/>
 					<reference ref="704866592"/>
-					<reference ref="497892948"/>
+					<reference ref="249368478"/>
 					<reference ref="1005079346"/>
-					<reference ref="291612885"/>
-					<reference ref="1003088295"/>
-					<reference ref="375846440"/>
+					<reference ref="152197074"/>
+					<reference ref="853304028"/>
+					<reference ref="51995342"/>
 					<reference ref="435328375"/>
-					<reference ref="202827481"/>
-					<reference ref="437231716"/>
-					<reference ref="582853806"/>
+					<reference ref="762655382"/>
+					<reference ref="853679952"/>
+					<reference ref="16079577"/>
 				</array>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">160</int>
+			<int key="maxID">161</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
